Fix: change grid-card padding unit to em

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,7 +196,7 @@ button {
 
 .grid-card {
     text-align: center;
-    padding: 2rem;
+    padding: 2em;
     width: 210px;
     height: 210px;
 }
