Fix: change form wrapper padding to em

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -248,7 +248,7 @@ label {
 .form-wrapper {
     width: 76.2%;
     height: 150%;
-    padding: 2rem;
+    padding: 2em;
     background-color: white;
     border-radius: 1rem;
 }
