--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -261,7 +261,7 @@ label {
 input[type=text], input[type=email] {
     width: 100%;
     height: 4rem;
-    padding-left: 2rem;
+    padding-left: 2em;
     border-radius: 2rem;
     border: 1px solid rgb(150, 150, 150);
 }
