--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,8 +269,8 @@ input[type=text], input[type=email] {
 textarea {
     width: 100%;
     height: 25rem;
-    padding-left: 2rem;
-    padding-top: 2rem;
+    padding-left: 2em;
+    padding-top: 2em;
     border-radius: 2rem;
     border: 1px solid rgb(150, 150, 150);;
 }
