Add: font size variable to body

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,8 @@ The elements declared here are gener*/
 
 /*BODY STYLES*/
 body {
+
+    font-size: var(--font-size__main);
     margin: 0;          /*removes all margin from the body*/
     padding: 0;         /*removes all padding from the body*/
     overflow-x: hidden; /*disables horizontal scrolling - we need to hide stuff outside the viewport*/
