Add: flex direction to body

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,7 @@ body {
     overflow-x: hidden; /*disables horizontal scrolling - we need to hide stuff outside the viewport*/
     width: 100%;
     display: flex;
+    flex-direction: column;
 }
 
 html {
