Add: global selector for flex row

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -38,6 +38,10 @@
         flex-direction: column-reverse;
     }
 
+    .flex-row-xs {
+        flex-direction: row;
+    }
+
     .align-start-xs {
         align-items: start;
     }
