--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,9 @@
 The elements declared here are gener*/
 
 /*SETS BOX SIZING TO BORDER BOX FOR ALL ELEMENTS*/
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -18,9 +20,12 @@ html {
 body {
 
     font-size: 1.6rem;
-    margin: 0;          /*removes all margin from the body*/
-    padding: 0;         /*removes all padding from the body*/
-    overflow-x: hidden; /*disables horizontal scrolling - we need to hide stuff outside the viewport*/
+    margin: 0;
+    /*removes all margin from the body*/
+    padding: 0;
+    /*removes all padding from the body*/
+    overflow-x: hidden;
+    /*disables horizontal scrolling - we need to hide stuff outside the viewport*/
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -28,13 +33,13 @@ body {
 
 /*SECTION STYLES*/
 /*this generates a full width and height section*/
-.section-full {         
+.section-full {
     width: 100vw;
     min-height: 100vh;
 }
 
 /*this generates a full width and half height section*/
-.section-half {         
+.section-half {
     width: 100vw;
     min-height: 50vh;
 }
@@ -48,12 +53,12 @@ body {
 /*COLUMN STYLES*/
 
 /*we can put columns into containers, this generates a column half the width of its parent*/
-.column-2 {             
+.column-2 {
     width: 50%;
 }
 
 /*we can put columns into containers, this generates a column quarter the width of its parent*/
-.column-4 {             
+.column-4 {
     height: auto;
     width: 25%;
 }
@@ -87,16 +92,16 @@ p {
 }
 
 /*some text parts need to be very bold, so we set them here*/
-span {         
-    font-weight: 800;    
+span {
+    font-weight: 800;
 }
 
 /*the default text color is black, but we also need some white text on the page*/
-.text-white {          
+.text-white {
     color: white;
 }
 
-.text-shadow{
+.text-shadow {
     text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.25);
 }
 
@@ -135,7 +140,7 @@ span {
 }
 
 /*BOXES SOMETIMES NEED SOME SHADOW AND ROUND BORDERS TOO*/
-.box-shadow{
+.box-shadow {
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.25);
 }
 
@@ -159,20 +164,20 @@ button {
 
 /*BACKGROUND GRADIENTS*/
 .background {
-    background: rgb(17,0,255);
-    background: linear-gradient(43deg, rgba(17,0,255,1) 0%, rgba(188,0,255,1) 95%);
+    background: rgb(17, 0, 255);
+    background: linear-gradient(43deg, rgba(17, 0, 255, 1) 0%, rgba(188, 0, 255, 1) 95%);
 }
 
 .background-reverse {
-    background: rgb(188,0,255);
-    background: linear-gradient(43deg, rgba(188,0,255,1) 0%, rgba(17,0,255,1) 95%);
+    background: rgb(188, 0, 255);
+    background: linear-gradient(43deg, rgba(188, 0, 255, 1) 0%, rgba(17, 0, 255, 1) 95%);
 }
 
 .background-mask {
-    background: rgb(255,255,255);
-    background: 
-    linear-gradient(30deg, rgba(255,255,255,1) 65%, rgba(17,0,255,0) 65%),
-    linear-gradient(43deg, rgba(17,0,255,1) 0%, rgba(188,0,255,1) 95%);
+    background: rgb(255, 255, 255);
+    background:
+        linear-gradient(30deg, rgba(255, 255, 255, 1) 65%, rgba(17, 0, 255, 0) 65%),
+        linear-gradient(43deg, rgba(17, 0, 255, 1) 0%, rgba(188, 0, 255, 1) 95%);
 }
 
 /*SOMETIMES WE NEED TO SPACE OR POSITION THINGS DIFFERENTLY*/
@@ -266,7 +271,8 @@ label {
     width: 100%;
 }
 
-input[type=text], input[type=email] {
+input[type=text],
+input[type=email] {
     width: 100%;
     height: 4rem;
     padding-left: 2em;
@@ -280,7 +286,8 @@ textarea {
     padding-left: 2em;
     padding-top: 2em;
     border-radius: 2rem;
-    border: 1px solid rgb(150, 150, 150);;
+    border: 1px solid rgb(150, 150, 150);
+    ;
 }
 
 /*FOOTER STYLINGS*/
