Fix: explanation in comment for xs media

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,4 +1,4 @@
-/*MEDIA QUERIES FOR XS SCREENS AS A MEANS OF A WORST CASE*/
+/*MEDIA QUERIES FOR XS SCREENS*/
 @media only screen and (max-width: 375px) {
 
     /*HERO SECTION STYLES FOR XS*/ 
