--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,5 +1,5 @@
 /*MEDIA QUERIES FOR XS SCREENS*/
-@media only screen and (max-width: 375px) {
+@media only screen and (min-width: 375px) {
 
     /*HERO SECTION STYLES FOR XS*/ 
     h1 {
