Fix: hover styles for visited nav links

--- a/assets/css/responsive-header.css
+++ b/assets/css/responsive-header.css
@@ -52,6 +52,10 @@
 .headerbar a:visited {
     color: rgb(71, 71, 71);
 }
+
+.headerbar a:visited:hover {
+    color: #6920DD;
+}
 /*HEADER END*/
 
 /*RESPONSIVE HEADER START*/
