--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,7 +85,7 @@ h3 {
 }
 
 p {
-    font-family: poppins, sans-serif;
+    font-family: Poppins, sans-serif;
     font-size: 1.6rem;
     font-weight: 400;
     margin: 0;
