--- a/assets/css/responsive-header.css
+++ b/assets/css/responsive-header.css
@@ -25,7 +25,7 @@
     padding: 0;
     display: flex;
     margin-right: -3rem;
-    font-family: poppins, sans-serif;
+    font-family: Poppins, sans-serif;
     font-weight: 400;
     font-size: 1.6rem;
 }
@@ -111,7 +111,7 @@
         padding-top: 0;
         display: block;
         margin-right: -3rem;
-        font-family: poppins, sans-serif;
+        font-family: Poppins, sans-serif;
         font-weight: 400;
     }
 
@@ -205,7 +205,7 @@
         padding-top: 0;
         display: block;
         margin-right: -3rem;
-        font-family: poppins, sans-serif;
+        font-family: Poppins, sans-serif;
         font-weight: 400;
     }
 
@@ -293,7 +293,7 @@
         padding-top: 0;
         display: block;
         margin-right: -3rem;
-        font-family: poppins, sans-serif;
+        font-family: Poppins, sans-serif;
         font-weight: 400;
     }
 
@@ -386,7 +386,7 @@
         padding-top: 0;
         display: block;
         margin-right: -3rem;
-        font-family: poppins, sans-serif;
+        font-family: Poppins, sans-serif;
         font-weight: 400;
     }
 
