Add: responsive behaviour for about section

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -46,6 +46,8 @@
         align-items: start;
     }
 
+    /*ABOUT SECTION STYLES FOR XS*/ 
+
     /*TESTIMONIAL SECTION STYLES FOR XS*/
 
     .testimonial-text {
