--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -46,7 +46,16 @@
         align-items: start;
     }
 
-    /*ABOUT SECTION STYLES FOR XS*/ 
+    /*ABOUT SECTION STYLES FOR XS*/
+    .grid-container-xs {
+        place-items: end;
+        width: 50%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-column-gap: 35px;
+        grid-row-gap: 35px;
+    }
+    
 
     /*TESTIMONIAL SECTION STYLES FOR XS*/
 
