--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -48,8 +48,8 @@
 
     /*ABOUT SECTION STYLES FOR XS*/
     .grid-container-xs {
-        place-items: end;
-        width: 50%;
+        place-items: center;
+        width: 100%;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(4, 1fr);
         grid-column-gap: 35px;
