--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -271,6 +271,10 @@ label {
     color: rgb(187, 187, 187);
 }
 
+.red-star {
+    color: red;
+}
+
 .form-wrapper {
     width: 76.2%;
     height: 150%;
