--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -310,6 +310,7 @@ textarea {
     padding-top: 2em;
     border-radius: 2rem;
     border: 1px solid rgb(150, 150, 150);
+    resize: none;
 }
 
 /*FOOTER STYLINGS*/
