Add: margin to left contact column text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -280,6 +280,10 @@ label {
     color: red;
 }
 
+.column-2 > p {
+    margin-top: 1.5rem;
+}
+
 .form-wrapper {
     width: 76.2%;
     height: auto;
