--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -61,6 +61,7 @@
     .grid-container-xs {
         place-items: center;
         width: 100%;
+        padding: 3rem 0rem;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(4, 1fr);
         grid-column-gap: 35px;
